--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# pycache
+config/__pycache__/
+data_retrieval/__pycache__/
+template_rendering/__pycache__/
+tests/__pycache__/
+utils/__pycache__/
+
 # Personal Data
 token.pickle
 config/credentials.json
